--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -1,17 +1,20 @@
+{% extends 'projects/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-    <img src="{% static project.image %}"/>
+{% block content %}
+    
     <h1>{{project.title}}</h1>
-    <p>{{project.description}}</p>
-    <p>{{project.technology}}</p>
+    <div class="row">
+        <div class="col-md-8">
+            <img class="img-fluid" src="{% static project.image %}"/>
+        </div>
+        <div class="col-md-4">
+            <h5>About the project</h5>
+            <p>{{project.description}}</p>
+            <h5>Built with:</h5>
+            <p>{{project.technology}}</p>
+        </div>
+    </div>
+   
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
